--- a/Social Media Components/index.html
+++ b/Social Media Components/index.html
@@ -1,57 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Social Media Components</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-
-
-
-    <div class="component component1">
-        <h3>Tag Used</h3>
-        <div class="tags">
-            <a href="">Card UI</a>
-            <a href="">Free UI</a>
-            <a href="">UI Desing Daily</a>
-            <a href="">UI Components</a>
-            <a href="">UI Design</a>
-        </div>
-
-
-
-
-
+    <div class="component">
+    <h3>Tags used</h3>
+    <div class="tags">
+        <a href="#">Card UI</a>
+        <a href="#">Free UI</a>
+        <a href="#">UI Design Daily</a>
+        <a href="#">UI components</a>
+        <a href="#">UI design</a>
     </div>
+</div>
 
-    <div class="component component1">
-        <h3>Authors</h3>
-        <ul class="authors">
-            <li>
-                <img src="img/avatar.png" alt="">
-                <div class="detail">
-                    <div class="name"> Polly Lawson </div>
-                    <div class="location">Bergen, Norway
-                    </div>
-                </div>
-                <a href="">Follow</a>
+<div class="component">
+    <h3>Authors</h3>
+    <ul class="authors">
+        <li>
+            <img src="img/avatar.png" alt="">
+            <div class="detail">
+                <div class="name">Polly Lawson</div>
+                <div class="location">Bergen, Norway</div>
+            </div>
+            <a href="#" class="follow-btn">Follow</a>
+        </li>
+        <li>
+            <img src="img/avatar.png" alt="">
+            <div class="detail">
+                <div class="name">Polly Lawson</div>
+                <div class="location"> Bergen, Norway</div>
+            </div>
+            <a href="#" class="follow-btn">Follow</a>
+        </li>
+    </ul>
+</div>
 
-
-            </li>
-
-
-        </ul>
-
-
-
-
-
-    </div>
-
-
+<div class="component">
+    <h3>Day 13010・People List UI Design</h3>
+    <time>Published Mar 12, 2021</time>
+    <ul class="project-actions">
+        <li>
+            <img src="icons/icon-like.svg" alt="">
+            47
+        </li>
+        <li>
+            <img src="icons/icon-eye.svg" alt="">
+            3877
+        </li>
+        <li>
+            <img src="icons/icon-message.svg" alt="">
+            975
+        </li>
+    </ul>
+    <a href="#" class="like-btn">
+        Like this project
+    </a>
+</div>
 </body>
-
 </html>
